fixed text-align in welcome div

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -35,5 +35,8 @@
 
 h1, h2 {
   color: #495057;
+}
+
+#welcome {
   text-align: center;
 }
